--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
         <!-- right-content div -->
         <div class="right-content">
-          <div class="imgs">
+          <div class="imgs" id="hero-img">
             <img class="hero hero1" src="./images/gameball-home-hero-main-p-500.png" alt="main home">
             <img class="hero hero2" src="./images/gameball-home-hero-profile.png" alt="profile" height="180"
               width="180">
@@ -323,66 +323,238 @@
             <h2 class="head-feature">Features to help achieve all your growth and retention objectives</h2>
           </div>
           <div class="features-list row">
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/loyaltyandcashback.svg" alt="loyalty and cashback" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/loyaltyandcashback.svg" alt="loyalty and cashback" width="50" height="50">
+                </div>
+                <p>Loyalty and Cashback</p>
               </div>
-              <p>Loyalty and Cashback</p>
             </div>
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/referral-icon.svg" alt="referral-icon" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/referral-icon.svg" alt="referral-icon" width="50" height="50">
+                </div>
+                <p>Referral Management </p>
               </div>
-              <p>Referral Management </p>
             </div>
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/rewards.svg" alt="rewards" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/rewards.svg" alt="rewards" width="50" height="50">
+                </div>
+                <p>Rule-based Rewards</p>
               </div>
-              <p>Rule-based Rewards</p>
             </div>
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/segmentation.svg" alt="segmentation" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/segmentation.svg" alt="segmentation" width="50" height="50">
+                </div>
+                <p>Customer Segmentation</p>
               </div>
-              <p>Customer Segmentation</p>
-
             </div>
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/messages.svg" alt="messages" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/messages.svg" alt="messages" width="50" height="50">
+                </div>
+                <p>Personalized Messaging</p>
               </div>
-              <p>Personalized Messaging</p>
             </div>
-            <div class="feature-item">
-              <div class="icon-img">
-                <img src="./images/-levels.svg" alt="messages" width="50" height="50">
+            <div class="wrapper">
+              <div class="feature-item">
+                <div class="icon-img">
+                  <img src="./images/-levels.svg" alt="messages" width="50" height="50">
+                </div>
+                <p>Tiering Program</p>
               </div>
-              <p>Tiering Program</p>
+            </div>
+          </div>
+          <div class="list-content row">
+            <div class="list-img">
+              <img src="./images/cashback-campaign-message-p-1080.png" alt="cashback campaing" width="525" height="544">
+            </div>
+            <div class="list-desc">
+              <h2>Loyalty and Cashback</h2>
+              <p>Maintain customer loyalty by giving back a certain percentage of the amount spent and helping them save
+                money on their next purchase.</p>
+              <div class="btnlink">
+                <div class="clk">
+                  <div class="btn1">
+                    <span style="padding-right: 10px;"> Learn more</span>
+                    <img src="./images/arrow.svg" alt="arrow" height="15" width="15">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- End features section -->
+
+  <!-- Customer section -->
+  <section class="customer-engage">
+    <div class="main-container">
+      <div class="column">
+        <div class="text-content  column">
+          <h2 class="frecoleta-title engage">Keep your customers engaged, valued, and happy</h2>
+          <p>Gameball is a revolutionary marketing tool built to replace all your tools with the broadest range of
+            features to keep your customers engaged, valued, and happy; you'll turn them into repeat customers!</p>
+        </div>
+        <div class="numbers row">
+          <div class="returns column ">
+            <h2 class="frecoleta-title num">19%</h2>
+            <span>More revenue</span>
+          </div>
+
+          <div class="returns column">
+            <h2 class="frecoleta-title rborder num">33%</h2>
+            <span>Returning customers</span>
+          </div>
 
 
+          <div class="borderless returns column">
+            <h2 class="frecoleta-title num ">7x</h2>
+            <span>Visitor to signup conversion</span>
+          </div>
+        </div>
 
+      </div>
+    </div>
+  </section>
+  <!-- End Customer Section -->
 
+  <!-- Section 5 Gameball Roles -->
+  <section class="roles">
+    <div class="main-container">
+      <div class="content">
+        <div class="texts">
+          <span>FOR ALL ROLES</span>
+          <h2 class="frecoleta-title mtop">Gameball was built for you!</h2>
+        </div>
+        <div class="main-content row">
+          <div class="left column">
+            <a href="#" class="role-desc column">
+              <div class="icondesc">
+                <img src="./images/marketer.svg" alt="marketer" height="24" width="24">
+                <span>For Marketers</span>
+              </div>
+              <p>Launch your Omni-Channel campaigns with the click of a button.</p>
+            </a>
 
+            <a href="#" class="role-desc column">
+              <div class="icondesc">
+                <img src="./images/productmanager.svg" alt="product manager" height="24" width="24">
+                <span>For Product Managers</span>
+              </div>
+              <p>You no longer have to worry about implementation.</p>
+            </a>
 
+            <a href="#" class="role-desc column">
+              <div class="icondesc">
+                <div><i class="fas fa-at"></i> <span>For Developers</span></div>
+
+              </div>
+              <p>Simple, seamless, and quick to integrate through our SDKs and APIs.</p>
+            </a>
+          </div>
+
+          <div class="right">
+            <img src="./images/retention-for-marketers.svg" alt="retention" width="405" height="405">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End of Section 5 Gameball Roles -->
+  <section class="growth">
+    <div class="main-container">
+      <div class="growth-content column">
+        <h2 class="text-growth frecoleta-title">
+          Take the first steps towards growth
+        </h2>
+        <p>Book your free consultation with our team and learn about all the ways you can grow your business, engage
+          your customers and improve retention with our marketing solutions and retention programs.
+        </p>
+
+        <button>Book A Demo</button>
+      </div>
+    </div>
+  </section>
+  <!-- Footer -->
+  <footer>
+    <div class="main-container">
+      <div class="fcontent row">
+        <div class="footer-left column">
+          <img src="./images/gameball-logo-white.svg" alt="gameball logo" width="155" height="40">
+          <div class="left-cont">
+            <label>Subscribe to our newsletter</label>
+            <div class="btns row">
+              <input class="fregular" type="email" placeholder="Enter your email">
+              <button class="fregular">Subscribe</button>
+            </div>
+          </div>
+        </div>
+        <div class="footer-right">
+          <div class="row">
+            <div class="list">
+              <ul>
+                <li><a href="">For Shopify</a> </li>
+                <li><a href="">Product</a> </li>
+                <li><a href="">Loyalty & Cashback</a> </li>
+                <li><a href="">VIP & Tiering</a> </li>
+                <li><a href="">Referrals</a> </li>
+                <li><a href="">Gamification & Rule-based Rewards</a> </li>
+                <li><a href="">Wallets</a> </li>
+                <li><a href="">Cross Channel Messaging</a> </li>
+                <li><a href="">Profiling & Segmentation</a> </li>
+              </ul>
+            </div>
+            <div class="list">
+              <ul>
+                <li><a href="">Pricing: Shopify</a></li>
+                <li><a href="">Partners (Soon)</a></li>
+                <li><a href="">Industries (Soon)</a></li>
+                <li><a href="">E-commerce</a></li>
+                <li><a href="">Retail</a></li>
+                <li><a href="">Fintech</a></li>
+              </ul>
+            </div>
+            <div class="list">
+              <ul>
+                <li><a href="">Resources</a></li>
+                <li><a href="">Integrations</a></li>
+                <li><a href="">Apps</a></li>
+                <li><a href="">Help Center</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Developer Portal</a></li>
+                <li><a href="">Case Studies (Soon)</a></li>
+                <li><a href="">Company</a></li>
+                <li><a href="">Careers</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- End of footer -->
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
 
   <!-- animating section 2 images using vanilla library -->
-  <script type="text/javascript" src="vanilla-tilt.js"></script>
+  <!-- <script type="text/javascript" src="vanilla-tilt.js"></script>
   <script type="text/javascript">
     VanillaTilt.init(document.querySelectorAll(".hero"), {
       max: 10,
       speed: 10,
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
