--- a/index.html
+++ b/index.html
@@ -470,6 +470,9 @@
       </div>
     </div>
   </section>
+  <div class="br" style="width: 100vw; height: 100vh; background-color: antiquewhite;">
+
+  </div>
   <!-- End of Section 5 Gameball Roles -->
   <section class="growth">
     <div class="main-container">
@@ -500,44 +503,53 @@
           </div>
         </div>
         <div class="footer-right">
-          <div class="row">
+          <div class="link-list row">
             <div class="list">
               <ul>
-                <li><a href="">For Shopify</a> </li>
-                <li><a href="">Product</a> </li>
-                <li><a href="">Loyalty & Cashback</a> </li>
-                <li><a href="">VIP & Tiering</a> </li>
-                <li><a href="">Referrals</a> </li>
-                <li><a href="">Gamification & Rule-based Rewards</a> </li>
-                <li><a href="">Wallets</a> </li>
-                <li><a href="">Cross Channel Messaging</a> </li>
-                <li><a href="">Profiling & Segmentation</a> </li>
+                <li class="list-txtb"><a href="">For Shopify</a> </li>
+                <li class="list-txtb">Product</li>
+                <li><a class="link" href="">Loyalty & Cashback</a> </li>
+                <li><a class="link" href="">VIP & Tiering</a> </li>
+                <li><a class="link" href="">Referrals</a> </li>
+                <li><a class="link" href="">Gamification & Rule-based Rewards</a> </li>
+                <li><a class="link" href="">Wallets</a> </li>
+                <li><a class="link" href="">Cross Channel Messaging</a> </li>
+                <li><a class="link" href="">Profiling & Segmentation</a> </li>
               </ul>
             </div>
             <div class="list">
               <ul>
-                <li><a href="">Pricing: Shopify</a></li>
-                <li><a href="">Partners (Soon)</a></li>
-                <li><a href="">Industries (Soon)</a></li>
-                <li><a href="">E-commerce</a></li>
-                <li><a href="">Retail</a></li>
-                <li><a href="">Fintech</a></li>
+                <li class="list-txtb"><a href="">Pricing: Shopify</a></li>
+                <li class="list-txtb"><a href="">Partners (Soon)</a></li>
+                <h5 class="list-txtb">Industries (Soon)</h5>
+                <li><a class="link" href="">E-commerce</a></li>
+                <li><a class="link" href="">Retail</a></li>
+                <li><a class="link" href="">Fintech</a></li>
               </ul>
             </div>
             <div class="list">
               <ul>
-                <li><a href="">Resources</a></li>
-                <li><a href="">Integrations</a></li>
-                <li><a href="">Apps</a></li>
-                <li><a href="">Help Center</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Developer Portal</a></li>
-                <li><a href="">Case Studies (Soon)</a></li>
-                <li><a href="">Company</a></li>
-                <li><a href="">Careers</a></li>
+                <li class="list-txtb">Resources</li>
+                <li><a class="link" href="">Integrations</a></li>
+                <li><a class="link" href="">Apps</a></li>
+                <li><a class="link" href="">Help Center</a></li>
+                <li><a class="link" href="">Blog</a></li>
+                <li><a class="link" href="">Developer Portal</a></li>
+                <li><a class="link" href="">Case Studies (Soon)</a></li>
+                <h5 class="list-txtb">Company</h5>
+                <li><a class="link" href="">Careers</a></li>
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="contentlast row">
+        <p>&copy; 2022 AyaShahin ·<a href="">Privacy policy</a> </p>
+        <div class="media row">
+          <a href=""><img src="./images/fb.svg" alt="facebook"></a>
+          <a href=""><img src="./images/twitter.svg" alt="twitter"></a>
+          <a href=""><img src="./images/insta.svg" alt="instagram"></a>
+          <a href=""><img src="./images/linkedin.svg" alt="linkedin"></a>
         </div>
       </div>
     </div>
