--- a/index.html
+++ b/index.html
@@ -470,10 +470,192 @@
       </div>
     </div>
   </section>
-  <div class="br" style="width: 100vw; height: 100vh; background-color: antiquewhite;">
-
-  </div>
   <!-- End of Section 5 Gameball Roles -->
+  <!-- Section 6 Customers Reviews -->
+  <section class="creviews">
+    <div class="review-content column">
+      <h2 class="frecoleta-title">
+        Customers love Gameball!
+      </h2>
+      <!-- Up Content -->
+      <div class="up-content row">
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Frankincense Pure</h5>
+              <span>Australia</span>
+            </div>
+          </div>
+          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
+            great support, and we look forward to the an even greater platform going forward.</p>
+        </div>
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Frankincense Pure</h5>
+              <span>Australia</span>
+            </div>
+          </div>
+          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
+            great support, and we look forward to the an even greater platform going forward.</p>
+        </div>
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Lianox</h5>
+              <span>Germany</span>
+            </div>
+          </div>
+          <p>We used Smile for 2 years, and Gameball is in a league of its own. There are SO many more features that
+            you cannot even compare the two. As it currently stands, one would be foolish to use any other loyalty
+            program</p>
+        </div>
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>SIMPLYOU</h5>
+              <span>Belgium</span>
+            </div>
+          </div>
+          <p>We do really like the app!! Recommended !! You will experience a amazing strategy ;) Customer Service
+            10/10
+          </p>
+        </div>
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Remaly Designs</h5>
+              <span>Saudi Arabia</span>
+            </div>
+          </div>
+          <p>Honestly this is the best loyalty app I have found so far! I believe it will be really fun and
+            encouraging for customers as it has nice challenges, and what's even better is that you can customize
+            the
+            challenges!
+          </p>
+        </div>
+
+        <div class="up-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Remaly Designs</h5>
+              <span>Saudi Arabia</span>
+            </div>
+          </div>
+          <p>Honestly this is the best loyalty app I have found so far! I believe it will be really fun and
+            encouraging for customers as it has nice challenges, and what's even better is that you can customize
+            the
+            challenges!
+          </p>
+
+        </div>
+
+      </div>
+      <!-- Up content end -->
+
+      <!-- Down Content -->
+      <div class="down-content row">
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Frankincense Pure</h5>
+              <span>Australia</span>
+            </div>
+          </div>
+          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
+            great support, and we look forward to the an even greater platform going forward.</p>
+        </div>
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Frankincense Pure</h5>
+              <span>Australia</span>
+            </div>
+          </div>
+          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
+            great support, and we look forward to the an even greater platform going forward.</p>
+        </div>
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Lianox</h5>
+              <span>Germany</span>
+            </div>
+          </div>
+          <p>We used Smile for 2 years, and Gameball is in a league of its own. There are SO many more features that
+            you cannot even compare the two. As it currently stands, one would be foolish to use any other loyalty
+            program</p>
+        </div>
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>SIMPLYOU</h5>
+              <span>Belgium</span>
+            </div>
+          </div>
+          <p>We do really like the app!! Recommended !! You will experience a amazing strategy ;) Customer Service
+            10/10
+          </p>
+        </div>
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Remaly Designs</h5>
+              <span>Saudi Arabia</span>
+            </div>
+          </div>
+          <p>Honestly this is the best loyalty app I have found so far! I believe it will be really fun and
+            encouraging for customers as it has nice challenges, and what's even better is that you can customize
+            the
+            challenges!
+          </p>
+        </div>
+
+        <div class="down-items column">
+          <div class="item-content row">
+            <img src="./images/review-stars.svg" alt="review icon">
+            <div class="item-title">
+              <h5>Remaly Designs</h5>
+              <span>Saudi Arabia</span>
+            </div>
+          </div>
+          <p>Honestly this is the best loyalty app I have found so far! I believe it will be really fun and
+            encouraging for customers as it has nice challenges, and what's even better is that you can customize
+            the
+            challenges!
+          </p>
+
+        </div>
+
+      </div>
+      <!-- Down content end -->
+    </div>
+    </div>
+  </section>
+  <!-- wrapper -->
+  <div class="br"></div>
+  <!-- end of wrapper -->
   <section class="growth">
     <div class="main-container">
       <div class="growth-content column">
