slide up effect added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gameball</title>
-  <link rel="icon" type="image/x-icon" href="./images/Gameball---Icon32x32.png">
+  <link rel="icon" type="image/x-icon" href="./images/Gameball---Icon32x32.png"> <!--Favicon-->
   <link rel='stylesheet' href='css/style.css'>
-  <link rel='stylesheet' href='css/all.css'>
+  <link rel='stylesheet' href='css/all.css'> <!-- Font awesome style sheet-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -34,7 +34,7 @@
         <div class="logo">
           <a class="logoimg" href="index.html"><img src="./images/gameball-logo.svg" alt="gameball logo"></a>
         </div>
-
+        <!-- Navigator buttons -->
         <ul class="links">
           <li><a href="#home" class="active">Home</a></li>
           <li class="dropdown">
@@ -241,7 +241,7 @@
   </header>
   <!-- Section 2 website description -->
   <section class="description">
-    <div class="main-container">
+    <div class="main-container reveal">
       <div class="row">
         <!-- left-content div -->
         <div class="left-content">
@@ -296,7 +296,7 @@
 
   <!-- Section 3 Trusted brands -->
   <section class="trustedBrands">
-    <div class="main-container">
+    <div class="main-container reveal">
       <div class="brands-content">
         <h2 class="bus">
           Trusted by over 1,500 business world wide
@@ -316,7 +316,7 @@
   <!-- Section 4 Features -->
   <section class="features">
     <div class="overlay">
-      <div class="main-container">
+      <div class="main-container reveal">
         <div class="column">
           <div class="header">
             <h6 class="sub-head">gameball features</h6>
@@ -398,7 +398,7 @@
 
   <!-- Customer section -->
   <section class="customer-engage">
-    <div class="main-container">
+    <div class="main-container reveal">
       <div class="column">
         <div class="text-content  column">
           <h2 class="frecoleta-title engage">Keep your customers engaged, valued, and happy</h2>
@@ -430,7 +430,7 @@
 
   <!-- Section 5 Gameball Roles -->
   <section class="roles">
-    <div class="main-container">
+    <div class="main-container reveal">
       <div class="content">
         <div class="texts">
           <span>FOR ALL ROLES</span>
@@ -473,7 +473,7 @@
   <!-- End of Section 5 Gameball Roles -->
   <!-- Section 6 Customers Reviews -->
   <section class="creviews">
-    <div class="review-content column">
+    <div class="review-content column reveal">
       <h2 class="frecoleta-title">
         Customers love Gameball!
       </h2>
@@ -653,11 +653,14 @@
     </div>
     </div>
   </section>
+  <!--End of Section 6 Customers Reviews -->
+
+
   <!-- wrapper -->
   <div class="br"></div>
   <!-- end of wrapper -->
   <section class="growth">
-    <div class="main-container">
+    <div class="main-container reveal">
       <div class="growth-content column">
         <h2 class="text-growth frecoleta-title">
           Take the first steps towards growth
