--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gameball</title>
   <link rel="icon" type="image/x-icon" href="./images/Gameball---Icon32x32.png"> <!--Favicon-->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <!--Bootstrap linking -->
   <link rel='stylesheet' href='css/style.css'>
   <link rel='stylesheet' href='css/all.css'> <!-- Font awesome style sheet-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,16 +32,21 @@
 
     <!-- Navbar section -->
 
-    <nav class="topnav" id="myTopnav">
+    <nav class="topnav navbar navbar-expand-lg " id="myTopnav">
       <div class="container">
         <div class="logo">
-          <a class="logoimg" href="index.html"><img src="./images/gameball-logo.svg" alt="gameball logo"></a>
+          <a class="logoimg" href="index.html"><img src="./images/gameball-logo.svg" alt="gameball logo" width="194"
+              height="50"></a>
         </div>
+
         <!-- Navigator buttons -->
-        <ul class="links">
-          <li><a href="#home" class="active">Home</a></li>
-          <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn fregular">Product <i class="fas fa-chevron-down icons"></i></a>
+        <ul class="links navbar-nav mr-auto">
+          <li class="nav-item active "><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="dropdown nav-item">
+            <a href="javascript:void(0)" class="dropbtn fregular nav-link" id="navbarDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Product <i
+                class="fas fa-chevron-down icons"></i></a>
             <div class="dropdown-content content1">
               <div class="row">
                 <div class="drpleft">
@@ -190,7 +198,8 @@
                       </div>
                       <div class="texts">
                         <p class="mainp">Shopify</p>
-                        <p class="contentp">Your Shopify app to help you retain, engage, and acquire customers for your
+                        <p class="contentp">Your Shopify app to help you retain, engage, and acquire customers for
+                          your
                           shopify store</p>
                       </div>
                       <div class="btnlink">
@@ -740,6 +749,10 @@
     </div>
   </footer>
   <!-- End of footer -->
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script> -->
   <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
