--- a/index.html
+++ b/index.html
@@ -580,49 +580,49 @@
           <div class="item-content row">
             <img src="./images/review-stars.svg" alt="review icon">
             <div class="item-title">
-              <h5>Frankincense Pure</h5>
-              <span>Australia</span>
+              <h5>Tchooz Shoes</h5>
+              <span>Lebanon</span>
             </div>
           </div>
-          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
-            great support, and we look forward to the an even greater platform going forward.</p>
+          <p>I would like to post this because Gameball is 1 of the perfect applications on shopify that can help you
+            get what you want without complications and the customer service is superb, they answer you even during
+            holidays. 5 starts it is :)</p>
         </div>
 
         <div class="down-items column">
           <div class="item-content row">
             <img src="./images/review-stars.svg" alt="review icon">
             <div class="item-title">
-              <h5>Frankincense Pure</h5>
-              <span>Australia</span>
+              <h5>Experience Philippines </h5>
+              <span>Philippines</span>
             </div>
           </div>
-          <p>Gameball was the easiest, most fun, functional, and accessible to new Shopify users. Rana has been a
-            great support, and we look forward to the an even greater platform going forward.</p>
+          <p>Looking for rewards program. Gameball does more with its customize challenges. Really love this app!
+          </p>
         </div>
 
         <div class="down-items column">
           <div class="item-content row">
             <img src="./images/review-stars.svg" alt="review icon">
             <div class="item-title">
-              <h5>Lianox</h5>
-              <span>Germany</span>
+              <h5>MyDelifresh Ltd</h5>
+              <span>World</span>
             </div>
           </div>
-          <p>We used Smile for 2 years, and Gameball is in a league of its own. There are SO many more features that
-            you cannot even compare the two. As it currently stands, one would be foolish to use any other loyalty
-            program</p>
+          <p>Our Experince with Gameball has been brilliant so far, the customer service are fantastic at explaining any
+            of the features of the app and the potential seems endless with it.</p>
         </div>
 
         <div class="down-items column">
           <div class="item-content row">
             <img src="./images/review-stars.svg" alt="review icon">
             <div class="item-title">
-              <h5>SIMPLYOU</h5>
-              <span>Belgium</span>
+              <h5>Cariona</h5>
+              <span>United states</span>
             </div>
           </div>
-          <p>We do really like the app!! Recommended !! You will experience a amazing strategy ;) Customer Service
-            10/10
+          <p>I've been using this app for a few months now and it has been great. I had some issues creating a referral
+            program but the chat support was fantastic. Thank you!
           </p>
         </div>
 
@@ -685,65 +685,67 @@
   <!-- Footer -->
   <footer>
     <div class="main-container">
-      <div class="fcontent row">
-        <div class="footer-left column">
-          <img src="./images/gameball-logo-white.svg" alt="gameball logo" width="155" height="40">
-          <div class="left-cont">
-            <label>Subscribe to our newsletter</label>
-            <div class="btns row">
-              <input class="fregular" type="email" placeholder="Enter your email">
-              <button class="fregular">Subscribe</button>
+      <div class="column">
+        <div class="fcontent row">
+          <div class="footer-left column">
+            <img src="./images/gameball-logo-white.svg" alt="gameball logo" width="155" height="40">
+            <div class="left-cont">
+              <label>Subscribe to our newsletter</label>
+              <div class="btns row">
+                <input class="fregular" type="email" placeholder="Enter your email">
+                <button class="fregular">Subscribe</button>
+              </div>
+            </div>
+          </div>
+          <div class="footer-right">
+            <div class="link-list row">
+              <div class="list">
+                <ul>
+                  <li class="list-txtb"><a href="">For Shopify</a> </li>
+                  <li class="list-txtb">Product</li>
+                  <li><a class="link" href="">Loyalty & Cashback</a> </li>
+                  <li><a class="link" href="">VIP & Tiering</a> </li>
+                  <li><a class="link" href="">Referrals</a> </li>
+                  <li><a class="link" href="">Gamification & Rule-based Rewards</a> </li>
+                  <li><a class="link" href="">Wallets</a> </li>
+                  <li><a class="link" href="">Cross Channel Messaging</a> </li>
+                  <li><a class="link" href="">Profiling & Segmentation</a> </li>
+                </ul>
+              </div>
+              <div class="list">
+                <ul>
+                  <li class="list-txtb"><a href="">Pricing: Shopify</a></li>
+                  <li class="list-txtb"><a href="">Partners (Soon)</a></li>
+                  <h5 class="list-txtb">Industries (Soon)</h5>
+                  <li><a class="link" href="">E-commerce</a></li>
+                  <li><a class="link" href="">Retail</a></li>
+                  <li><a class="link" href="">Fintech</a></li>
+                </ul>
+              </div>
+              <div class="list">
+                <ul>
+                  <li class="list-txtb">Resources</li>
+                  <li><a class="link" href="">Integrations</a></li>
+                  <li><a class="link" href="">Apps</a></li>
+                  <li><a class="link" href="">Help Center</a></li>
+                  <li><a class="link" href="">Blog</a></li>
+                  <li><a class="link" href="">Developer Portal</a></li>
+                  <li><a class="link" href="">Case Studies (Soon)</a></li>
+                  <h5 class="list-txtb">Company</h5>
+                  <li><a class="link" href="">Careers</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-        <div class="footer-right">
-          <div class="link-list row">
-            <div class="list">
-              <ul>
-                <li class="list-txtb"><a href="">For Shopify</a> </li>
-                <li class="list-txtb">Product</li>
-                <li><a class="link" href="">Loyalty & Cashback</a> </li>
-                <li><a class="link" href="">VIP & Tiering</a> </li>
-                <li><a class="link" href="">Referrals</a> </li>
-                <li><a class="link" href="">Gamification & Rule-based Rewards</a> </li>
-                <li><a class="link" href="">Wallets</a> </li>
-                <li><a class="link" href="">Cross Channel Messaging</a> </li>
-                <li><a class="link" href="">Profiling & Segmentation</a> </li>
-              </ul>
-            </div>
-            <div class="list">
-              <ul>
-                <li class="list-txtb"><a href="">Pricing: Shopify</a></li>
-                <li class="list-txtb"><a href="">Partners (Soon)</a></li>
-                <h5 class="list-txtb">Industries (Soon)</h5>
-                <li><a class="link" href="">E-commerce</a></li>
-                <li><a class="link" href="">Retail</a></li>
-                <li><a class="link" href="">Fintech</a></li>
-              </ul>
-            </div>
-            <div class="list">
-              <ul>
-                <li class="list-txtb">Resources</li>
-                <li><a class="link" href="">Integrations</a></li>
-                <li><a class="link" href="">Apps</a></li>
-                <li><a class="link" href="">Help Center</a></li>
-                <li><a class="link" href="">Blog</a></li>
-                <li><a class="link" href="">Developer Portal</a></li>
-                <li><a class="link" href="">Case Studies (Soon)</a></li>
-                <h5 class="list-txtb">Company</h5>
-                <li><a class="link" href="">Careers</a></li>
-              </ul>
-            </div>
+        <div class="contentlast row">
+          <p>&copy; 2022 AyaShahin ·<a href="">Privacy policy</a> </p>
+          <div class="media row">
+            <a href=""><img src="./images/fb.svg" alt="facebook"></a>
+            <a href=""><img src="./images/twitter.svg" alt="twitter"></a>
+            <a href=""><img src="./images/insta.svg" alt="instagram"></a>
+            <a href=""><img src="./images/linkedin.svg" alt="linkedin"></a>
           </div>
-        </div>
-      </div>
-      <div class="contentlast row">
-        <p>&copy; 2022 AyaShahin ·<a href="">Privacy policy</a> </p>
-        <div class="media row">
-          <a href=""><img src="./images/fb.svg" alt="facebook"></a>
-          <a href=""><img src="./images/twitter.svg" alt="twitter"></a>
-          <a href=""><img src="./images/insta.svg" alt="instagram"></a>
-          <a href=""><img src="./images/linkedin.svg" alt="linkedin"></a>
         </div>
       </div>
     </div>
